--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,4 @@ logging.level.org.springframework=error
 logging.level.ro.ds=error
 
 server.port=${PORT:8080}
+spring.rabbitmq.addresses = localhost:5672
